# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_out_path = "window_manager/dm"

group("systemtest") {
  testonly = true

  deps = [
    ":dm_display_change_test",
    ":dm_display_minimal_test",
    ":dm_display_power_test",
    ":dm_screen_gamut_test",
    ":dm_screen_manager_test",
    ":dm_screenshot_cmd_test",
    ":dm_screenshot_test",
  ]
}

## SystemTest dm_display_minimal_test {{{
ohos_systemtest("dm_display_minimal_test") {
  module_out_path = module_out_path

  sources = [ "display_minimal_test.cpp" ]

  deps = [ ":dm_systemtest_common" ]
}

## SystemTest dm_display_power_test {{{
ohos_systemtest("dm_display_power_test") {
  module_out_path = module_out_path

  sources = [ "display_power_test.cpp" ]

  deps = [ ":dm_systemtest_common" ]
}

## SystemTest dm_display_minimal_test }}}

## SystemTest dm_display_change_test {{{
ohos_systemtest("dm_display_change_test") {
  module_out_path = module_out_path

  sources = [ "display_change_test.cpp" ]

  deps = [ ":dm_systemtest_common" ]
}

## SystemTest dm_display_change_test }}}

## SystemTest dm_screenshot_test {{{
ohos_systemtest("dm_screenshot_test") {
  module_out_path = module_out_path

  sources = [ "screenshot_test.cpp" ]

  deps = [ ":dm_systemtest_common" ]
}

## SystemTest dm_screenshot_test }}}

## SystemTest dm_screenshot_cmd_test {{{
ohos_systemtest("dm_screenshot_cmd_test") {
  module_out_path = module_out_path

  include_dirs = [ "//foundation/windowmanager/snapshot" ]

  sources = [
    "//foundation/windowmanager/snapshot/snapshot_utils.cpp",
    "screenshot_cmd_test.cpp",
  ]

  deps = [ ":dm_systemtest_common" ]
}

## SystemTest dm_screenshot_cmd_test }}}

## SystemTest dm_screen_manager_test {{{
ohos_systemtest("dm_screen_manager_test") {
  module_out_path = module_out_path

  sources = [ "screen_manager_test.cpp" ]

  deps = [ ":dm_systemtest_common" ]
}

## SystemTest dm_screen_manager_test }}}

## SystemTest dm_screen_gamut_test {{{
ohos_systemtest("dm_screen_gamut_test") {
  module_out_path = module_out_path

  sources = [ "screen_gamut_test.cpp" ]

  deps = [ ":dm_systemtest_common" ]
}

## SystemTest dm_screen_gamut_test }}}

## Build dm_systemtest_common.a {{{
config("dm_systemtest_common_public_config") {
  include_dirs = [
    "//foundation/windowmanager/dm/include",
    "//foundation/windowmanager/dmserver/include",
    "//foundation/windowmanager/interfaces/innerkits/dm",
    "//foundation/windowmanager/interfaces/innerkits/wm",
    "//foundation/windowmanager/utils/include",

    # RSSurface
    "//foundation/graphic/standard/rosen/modules/render_service_client",
  ]
}

ohos_static_library("dm_systemtest_common") {
  visibility = [ ":*" ]
  testonly = true

  sources = [ "display_test_utils.cpp" ]

  public_configs = [ ":dm_systemtest_common_public_config" ]

  public_deps = [
    "//foundation/graphic/standard/rosen/modules/render_service_client:librender_service_client",
    "//foundation/multimodalinput/input/frameworks/proxy:libmmi-client",
    "//foundation/windowmanager/dm:libdm",
    "//foundation/windowmanager/dmserver:libdms",
    "//foundation/windowmanager/utils:libwmutil",
    "//foundation/windowmanager/wm:libwm",
    "//foundation/windowmanager/wmserver:libwms",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}
## Build dm_systemtest_common.a }}}
